--- a/examples/ex1.html
+++ b/examples/ex1.html
@@ -1,3 +1,116 @@
+<p><link type="text/css" rel="stylesheet"
+href="https://cdn.jsdelivr.net/gh/p19z/markdowncss@master/legacy/md-1.0.0.0.css"/></p>
+
+<!-- <link type="text/css" rel="stylesheet"
+href="https://cdn.jsdelivr.net/gh/p19z/markdowncss@master/markdown.css"/> -->
+
+<h1>This is a really big, large title.</h1>
+
+<p>Here are some of the problems with default Markdown syntax:</p>
+
+<ul>
+<li>It uses your browser&#8217;s default font, size, and line-height (Times).</li>
+<li>It uses your browser&#8217;s default width (all the way across the page). This makes it really hard to read.</li>
+</ul>
+
+<h2>Large Note</h2>
+
+<p>This CSS file borrows extensively from the <a href="" title="http://getspace.org">Space</a>
+WordPress theme, which will give you a lot more tools to make your
+blog search engine friendly than just 70 lines of CSS. It&#8217;s also
+guaranteed to be compatible in more browsers than this stylesheet.
+You should check out their post on <a href="http://getspace.org/typographic-contras-minimalist-web-design/">how to make text actually look
+interesting</a>,
+and then <a href="https://www.e-junkie.com/ecom/gb.php?i=956848&amp;c=gc&amp;cl=107401&amp;ejc=4">buy their WordPress
+theme</a>.</p>
+
+<hr>
+
+<h3>Blockquotes</h3>
+
+<p>This is what a sample blockquote looks like:</p>
+
+<blockquote>
+  <p>&#8220;Then listen to me.&#8221; Franz then related to his friend the history of his
+excursion to the Island of Monte Cristo and of his finding a party of
+smugglers there, and the two Corsican bandits with them. He dwelt with
+considerable force and energy on the almost magical hospitality he had
+received from the count, and the magnificence of his entertainment in the
+grotto of the &#8220;Thousand and One Nights.&#8221; He recounted, with circumstantial
+exactitude, all the particulars of the supper, the hashish, the statues, the
+dream, and how, at his awakening, there remained no proof or trace of all
+these events, save the small yacht, seen in the distant horizon driving under
+full sail toward Porto-Vecchio.</p>
+
+<p>Then he detailed the conversation overheard by him at the Colosseum,
+between the count and Vampa, in which the count had promised to obtain the
+release of the bandit Peppino, - an engagement which, as our readers are
+aware, he most faithfully fulfilled. At last he arrived at the adventure of
+the preceding night, and the embarrassment in which he found himself placed
+by not having sufficient cash by six or seven hundred piastres to make up the
+sum required, and finally of his application to the count and the picturesque
+and satisfactory result that followed.</p>
+</blockquote>
+
+<h3>Ordered Lists</h3>
+
+<p>Here&#8217;s an example of an ordered list. I&#8217;m making this sentence really long to
+test the line wrapping.</p>
+
+<ol>
+<li>This list element is the first list element of many which will surely come.</li>
+<li>This list element is the <strong>second</strong> list element, and probably my favorite out
+of all of them.</li>
+<li>This list element is the <em>third</em> list element, which means it probably is
+anxious and has to fill niches not filled by the other two.</li>
+<li>The fourth list element is lazy.</li>
+</ol>
+
+<h3>Doubly Nested Lists</h3>
+
+<ul>
+<li><p>This is a list item.</p>
+
+<ul>
+<li>This list item is nested inside of the other one.</li>
+<li>Item two is next.</li>
+<li>The third item is always last!</li>
+</ul></li>
+</ul>
+
+<h3>Forms and Buttons</h3>
+
+<p>Here&#8217;s a sample form:</p>
+
+<form>
+  <input type="text" size="30" />
+  <br>
+  <label>
+      <input type="checkbox" />
+      <span>This is text accompanying the checkbox</span>
+  </label><br>
+  <label>
+      <input type="checkbox" />
+      <span>More text with a different checkbox</span>
+  </label>
+  <br><br>
+  <select>
+    <option>Select an option</option>
+    <option>One</option>
+    <option>Two</option>
+  </select>
+  <br>
+
+  <button type="submit">Sample Button</button>
+</form>
+
+<h3>Code Blocks</h3>
+
+<p>Code can either be <code>inline</code>, like <code>this</code>, or it can be on its own line. Here&#8217;s
+the CSS I&#8217;m using to style this document:</p>
+
+<pre><code>/* This is an really really really really really long comment at the start of the file to test line wrapping in source code. This comment should be above 200 characters long, and it is not part of the actual CSS; it is just for demo purposes. */
+
 /* markdowncss-v1.0.0.0 */
 body{
     margin: 0 auto;
@@ -131,7 +244,7 @@ input[type="submit"] {
 input[type=checkbox], input[type=radio] {
   cursor: pointer;
 }
-/* override default chrome & firefox settings */
+/* override default chrome &amp; firefox settings */
 input:not([type="image"]), textarea {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
@@ -265,3 +378,24 @@ button::-moz-focus-inner {
 @media print {
   .page-break  { display: block; page-break-before: always; }
 }
+</code></pre>
+
+<h3>Get Started</h3>
+
+<p>Include the following line at the top of your <code>.markdown</code> file:</p>
+
+<pre><code>&lt;link type="text/css" rel="stylesheet"
+href="https://cdn.jsdelivr.net/gh/p19z/markdowncss@master/legacy/md-1.0.0.0.css"/&gt;
+</code></pre>
+
+<p>Alternatively, for the latest stable release:</p>
+
+<pre><code>&lt;link type="text/css" rel="stylesheet"
+href="https://cdn.jsdelivr.net/gh/p19z/markdowncss@master/markdown.css"/&gt;
+</code></pre>
+
+<p>Experimental stylesheet can be included through:</p>
+
+<pre><code>&lt;link type="text/css" rel="stylesheet"
+href="https://cdn.jsdelivr.net/gh/p19z/markdowncss@master/markdown-staging.css"/&gt;
+</code></pre>
