// Remove broken link in example page

--- a/examples/ex1.html
+++ b/examples/ex1.html
@@ -15,7 +15,7 @@ href="https://cdn.jsdelivr.net/gh/p19z/markdowncss@master/markdown.css"/> -->
 
 <h2>Large Note</h2>
 
-<p>This CSS file borrows extensively from the <a href="" title="http://getspace.org">Space</a>
+<p>This CSS file borrows extensively from the &#8220;Space&#8221;
 WordPress theme, which will give you a lot more tools to make your
 blog search engine friendly than just 70 lines of CSS. It&#8217;s also
 guaranteed to be compatible in more browsers than this stylesheet.
