// Update comments about the `<link>` tag

--- a/examples/ex1.html
+++ b/examples/ex1.html
@@ -382,7 +382,8 @@ button::-moz-focus-inner {
 
 <h3>Get Started</h3>
 
-<p>Include the following line at the top of your <code>.markdown</code> file:</p>
+<p>Just add the following line to the top of your
+<code>.md</code>, <code>.mdx</code>, <code>.text</code> or <code>.markdown</code> files:</p>
 
 <pre><code>&lt;link type="text/css" rel="stylesheet"
 href="https://cdn.jsdelivr.net/gh/p19z/markdowncss@master/legacy/md-1.0.0.0.css"/&gt;
