Use "text-align: justify" on paragraphs. /* markdowncss-v1.1.0.0 */ + Switch to using github.io instead of jsdelivr.net as the favorite method for including CSS.

--- a/examples/ex1+ref1.0.html
+++ b/examples/ex1+ref1.0.html
@@ -1,5 +1,5 @@
 <p><link type="text/css" rel="stylesheet"
-href="https://p19z.github.io/markdowncss/markdown-staging.css"/></p>
+href="https://p19z.github.io/markdowncss/legacy/md-1.0.0.0.css"/></p>
 
 <h1>This is a really big, large title.</h1>
 
