--- a/examples/ex1+master.html
+++ b/examples/ex1+master.html
@@ -1,5 +1,5 @@
 <p><link type="text/css" rel="stylesheet"
-href="https://cdn.jsdelivr.net/gh/p19z/markdowncss@master/markdown.css"/></p>
+href="https://p19z.github.io/markdowncss/markdown.css"/></p>
 
 <h1>This is a really big, large title.</h1>
 
@@ -415,9 +415,9 @@ button::-moz-focus-inner {
 <p>View a sample file that implements most of the Markdown spec:</p>
 
 <ul>
-<li><a href="https://cdn.jsdelivr.net/gh/p19z/markdowncss@master/examples/ex1+cssV1.html">as HTML via jsdelivr.net</a></li>
-<li><a href="http://p19z.github.io/markdowncss/examples/ex1+cssV1.html">as HTML via github.io</a></li>
-<li><a href="https://raw.github.com/p19z/markdowncss/master/examples/ex1+cssV1.md">as raw markdown</a></li>
+<li><a href="https://cdn.jsdelivr.net/gh/p19z/markdowncss@master/examples/ex1+ref1.0.html">as HTML via jsdelivr.net</a></li>
+<li><a href="http://p19z.github.io/markdowncss/examples/ex1+ref1.0.html">as HTML via github.io</a></li>
+<li><a href="https://raw.github.com/p19z/markdowncss/master/examples/ex1+ref1.0.md">as raw markdown</a></li>
 </ul>
 
 <h4>Sample file using staging CSS version</h4>
@@ -435,19 +435,19 @@ the staging version of the style sheet:</p>
 <code>.md</code>, <code>.mdx</code>, <code>.text</code> or <code>.markdown</code> files:</p>
 
 <pre><code>&lt;link type="text/css" rel="stylesheet"
-href="https://cdn.jsdelivr.net/gh/p19z/markdowncss@master/legacy/md-1.0.0.0.css"/&gt;
-</code></pre>
-
-<p>Alternatively, for the latest stable release:</p>
-
-<pre><code>&lt;link type="text/css" rel="stylesheet"
-href="https://cdn.jsdelivr.net/gh/p19z/markdowncss@master/markdown.css"/&gt;
+href="https://p19z.github.io/markdowncss/markdown.css"/&gt;
 </code></pre>
 
 <p>Experimental stylesheet can be included through:</p>
 
 <pre><code>&lt;link type="text/css" rel="stylesheet"
-href="https://cdn.jsdelivr.net/gh/p19z/markdowncss@master/markdown-staging.css"/&gt;
+href="https://p19z.github.io/markdowncss/markdown-staging.css"/&gt;
+</code></pre>
+
+<p>Older versions are available in the &#8220;legacy&#8221; directory:</p>
+
+<pre><code>&lt;link type="text/css" rel="stylesheet"
+href="https://p19z.github.io/markdowncss/legacy/md-1.0.0.0.css"/&gt;
 </code></pre>
 
 <h5>Note: explicit closing tag</h5>
@@ -459,11 +459,12 @@ you experience problems with the <code>&lt;link&gt;</code> tag on its own.</p>
 
 <h4>Alternative content delivery</h4>
 
-<p>Instead of using <code>jsdelivr.net</code>, we should be able to include the
-stylesheet <em>from the master branch</em>, using <code>github.io</code>, like so:</p>
+<p>Instead of using <code>github.io</code> and the master branch, we should be able to
+include the stylesheet <strong>from another branch</strong>, using <code>jsdelivr.net</code>,
+like this:</p>
 
 <pre><code>&lt;link type="text/css" rel="stylesheet"
-href="https://p19z.github.io/markdowncss/markdown.css"/&gt;
+href="https://cdn.jsdelivr.net/gh/p19z/markdowncss@BRCHNAME/markdown.css"/&gt;
 </code></pre>
 
 <h3>History</h3>
@@ -471,12 +472,15 @@ href="https://p19z.github.io/markdowncss/markdown.css"/&gt;
 <p><ul>
 <li>SEP 20, 2012 - Copied from Kevin Burke&#8217;s project <a href="http://bitbucket.org/kevinburke/markdowncss">http://bitbucket.org/kevinburke/markdowncss</a>.</li>
 <li>NOV 25, 2019 - Updated URLs, switch to using <a href="https://github.com/p19z/markdowncss">https://github.com/p19z/markdowncss</a>,
-and change link to use <a href="https://cdn.jsdelivr.net/gh/p19z/markdowncss@master/markdown.css">https://cdn.jsdelivr.net/gh/p19z/markdowncss@master/markdown.css</a>
-otherwise we can&#8217;t load CSS in some (most?) cases. Using jsdelivr.net as
-a proxy instead of directly accessing Github, prevents the following error:</p>
+and change link to use <a href="https://p19z.github.io/markdowncss/markdown.css">https://p19z.github.io/markdowncss/markdown.css</a>
+otherwise we can&#8217;t load the CSS file due to MIME-type errors.
+Using <code>github.io</code> or <code>jsdelivr.net</code> as a proxy,
+instead of directly accessing the raw content on Github,
+prevents the following error:</p>
 
 <blockquote>
   <p>The resource from “https://raw.github.com/p19z/markdowncss/master/markdown.css”
 was blocked due to MIME type (“text/plain”) mismatch (X-Content-Type-Options: nosniff).</li>
+<li>NOV 26, 2019 - Use &#8220;text-align: justify&#8221; on paragraphs. markdowncss-v1.1.0.0.</li>
 </ul></p>
 </blockquote>
